--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Oliver Jörg",
   "license": "MIT",
   "dependencies": {
+    "array-sort": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
