--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "chirper",
   "version": "1.0.0",
   "description": "backend for chirper",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ojoerg/chirper"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server",
@@ -12,9 +16,9 @@
   "author": "Oliver Jörg",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "array-sort": "^1.0.0",
     "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -23,7 +27,8 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
