--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
